--- a/styles/main.css
+++ b/styles/main.css
@@ -7,9 +7,10 @@ body {
 	min-width: 20em;
 	margin: 0 auto;
 }
-img {
+#page img {
 	margin: 10px;
 	margin-left: 30px;
+	margin-bottom: 2em;
 	display: block;
 	background-color: #e7e3d8;
 	padding: 10px;
@@ -54,4 +55,33 @@ h1 {
 	text-align: center;
 	max-width: 1020px;
 	margin: 0 auto;
+}
+
+.modal {
+  position: absolute;
+  z-index: 1000;
+  padding: 30px;
+  background-color: #555;
+}
+
+#copyright {
+  margin: 17em auto 0 auto;
+  width: 30px;
+}
+
+#copyright-options {
+  background-color: #fff;
+  text-align: center;
+  clear: both;
+  padding: 15px;
+  border: 10px solid #999;
+  }
+
+  button.modal-close {
+  border: none;
+  background-color: #999;
+  padding: 10px;
+  margin: 10px 0 0 0;
+  float: right;
+  text-transform: uppercase;
 }
